--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="slick-container"  id="slick" data-slick='{}'>
             <div class="row-one">
               <div class="row-child">
-                <img src="./assets/image_one.jpg" alt="Seaside House">
+                <img src="/Frontend-Test/assets/image_one.jpg" alt="Seaside House">
               </div>
               <div class="row-child">
                 <div class="each-box">
@@ -45,7 +45,7 @@
                 </div>
               </div>
               <div class="row-child">
-                <img src="./assets/image_two.jpg" alt="Seaside House">
+                <img src="/Frontend-Test/assets/image_two.jpg" alt="Seaside House">
               </div>
             </div>
 
@@ -53,7 +53,7 @@
 
             <div class="row-one">
               <div class="row-child">
-                <img src="./assets/image_three.jpg" alt="Seaside House">
+                <img src="/Frontend-Test/assets/image_three.jpg" alt="Seaside House">
               </div>
               <div class="row-child">
                 <div class="each-box">
@@ -61,8 +61,7 @@
                   <h2 class="header">Madeira: exploring nature's paradise</h2>
                   <h3 class="sub-header">Embark on a captivating journey to Madeira, where lush landscapes and pristine beauty await. Our thoughtfully designed 
                     tours invite you to discover the island's natural wonders, from rugged coastlines to verdant forests. Immerse yourself 
-                    in the charming villages, indulge in local delicacies, and breathe in the fresh ocean air as you explore this enchanting 
-                    destination.
+                    in the charming villages, indulge in local delicacies as well.
                   </h3>
                   <button><a href="#">Learn More</a></button>
                 </div>
@@ -70,6 +69,7 @@
             </div>
 
       </div>
+      <div class="slick-pagination"></div>
     </article>
   </section>
 
