Conflict Issues Fixed
Conflict Issues Fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="slick-container"  id="slick" data-slick='{}'>
             <div class="row-one">
               <div class="row-child">
-                <img src="./assets/image_one.jpg" alt="Seaside House">
+                <img src="/Frontend-Test/assets/image_one.jpg" alt="Seaside House">
               </div>
               <div class="row-child">
                 <div class="each-box">
@@ -45,7 +45,7 @@
                 </div>
               </div>
               <div class="row-child">
-                <img src="./assets/image_two.jpg" alt="Seaside House">
+                <img src="/Frontend-Test/assets/image_two.jpg" alt="Seaside House">
               </div>
             </div>
 
@@ -53,7 +53,7 @@
 
             <div class="row-one">
               <div class="row-child">
-                <img src="./assets/image_three.jpg" alt="Seaside House">
+                <img src="/Frontend-Test/assets/image_three.jpg" alt="Seaside House">
               </div>
               <div class="row-child">
                 <div class="each-box">
